# bang-legacy

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  THANKS  TODO  configure.ac  mbpro-config.sh
src/: Makefile.am  analyze.cpp  analyze.h  banfunc.cpp  banfunc.h  banginterface.cpp  bangui.cpp  bangui.h  corefunctions.cpp  corefunctions.h  correlation.cpp  correlation.h  filefunctions.cpp  filefunctions.h  iugui.cpp  iugui.h  linal.cpp  linal.h  linalfunc.cpp  linalfunc.h  moremath.cpp  moremath.h
src/tools/: Makefile.am  combinemcmcdatafiles.cpp  dat2txt.cpp  generateparameters.cpp  multiplymcmcplots.cpp  multiplyplots.cpp  normalize.cpp  parse_tempo2_par.cpp  processensembleresults1d.cpp  processplots.cpp  scatterensemble.cpp  showoptimum.cpp
